[tool.poetry]
name = "lineprovider"
version = "0.1.0"
description = ""
authors = ["Anatoly <ad.uglev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
aiokafka = "^0.12.0"
redis = "^5.2.0"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
fast-depends = "^2.4.12"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
